app/assets/stylesheets/main.css.scss
/* ... */
label,
input,
button,
select {
  display:inline-block;
}

p,
li,
label {
  color: #666;
}
/*label {
  font-weight: bold;
  padding:24px 0 2px;
}*/
blockquote p {
  font-family: "Droid Serif", Georgia, "Times New Roman", Times, serif;
  font-style: italic;
}

a{color: #333; text-decoration:none;-webkit-transition:all .2s linear;-moz-transition:all .2s linear;-o-transition:all .2s linear;-ms-transition:all .2s linear;transition:all .2s linear}

a:hover{
  color: #999;
  text-decoration:none; 
}

.float-left {float:left; margin-right:40px;}
.categories-margin {margin-left:5px;}
.voucher {font-size:28px;}
.voucher-order {border:1px solid #efefef; padding:20px; margin:20px 0;}
.user-email {
  color:white;
  padding:2px 0 0 10px;
  font-size:12px;
  width:40px;

  img {width:40px;}
}
.user-avatar {
  img {width:40px}
}

p {font-size:14px;}

  .borderLine {
    float: left;
    width: 100%;
    padding: -10px 0px 10px 0px;
    display: inline-block;
    margin: -5px 0 15px 0;
  }
 .borderLine-left {
    border: 3px solid $red;
    height: 0;
    width: 20%;
    display: inline-block;
    float: left;
  }
 .borderLine-right {
    width: 70%;
    margin: 2px 0px 0 2px;
    float: left;
    height: 1px;
    border: 1px dotted #999;
  }

.section-divider {
  border-bottom:1px dotted #cfcfcf;
  margin:10px 0;
}

.well {
  padding:20px;
  width:97%;
}

a {color:#555555;}

.page-header {
  border-bottom: 1px solid #efefef;
  margin: -8px 0px 10px 0px;
  padding: 0;
}

.sub-desc {
  font-style: italic;
  color: #999;
}

input, textarea, .uneditable-input {
  width:90%;
}

.logo img {max-width:220px; min-width:200px;}


.description {
  height:auto;
}

#promotion-form select {min-height:50px;}



/*
---------------------------------------------
Icons
---------------------------------------------*/
.icon-plus {margin:4px 4px 0 0;}


/*
----------------------------------------------
Headings
----------------------------------------------*/
h6 {
  font-size: 18px;
}

#container-front {
  .item {
  background-color: #fff;
  margin: 5px 5px 20px 0px;
  cursor: pointer;
  background-color: #fff;
  color: #333;
  box-sizing: border-box;
  border: 4px solid #FBFBFB;
  position: relative;
}


}

/*
----------------------------------------------
NavBar
----------------------------------------------*/



header h1 {
  line-height: 0px;
  margin: 0px 0 8px 5px;
  width: 80%;
}

#nav .navbar-inner {
  min-height:35px;
  background-image: none;
  box-shadow: none;
  border-bottom: 2px solid #b6b6b6;
  background-color: #333333;
  background-image: -moz-linear-gradient(top, #333333, #333333);
  background-image: -ms-linear-gradient(top, #333333, #333333);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#333333));
  background-image: -webkit-linear-gradient(top, #333333, #333333);
  background-image: -o-linear-gradient(top, #333333, #333333);
  background-image: linear-gradient(top, #333333, #333333);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#333333', GradientType=0);
}
#nav .nav li a {
  text-shadow: none;
  font-size: 12px;
  color:white;
}
#nav .nav li a:hover {
  color: white;
    background-color:#ed464a;
}

.navbar .nav > .active > a,
.navbar .nav > .active > a:hover,
.navbar .nav > .active > a:focus {
  color: #555555;
  text-decoration: none;
  background-color: #e5e5e5;
  -webkit-box-shadow: none;
     -moz-box-shadow: none;
          box-shadow: none;
}

.navbar-fixed-top .navbar-inner,
.navbar-static-top .navbar-inner {

  -webkit-box-shadow: 0 2px 2px rgba(0, 0, 0, 1);
     -moz-box-shadow: 0 2px 2px rgba(0, 0, 0, 1);
          box-shadow: 0 2px 2px rgba(0, 0, 0, 1);
}

#nav .nav li.dropdown .dropdown-toggle .caret,
#nav .nav li.dropdown.open .caret {
  border-bottom-color: #555;
  border-top-color: #555;
}

#nav .btn-navbar {
  background-color: #DDD;
  background-image: none;
  box-shadow: none;
}
#nav .brand {
  font-family: "Oleo Script", "Droid Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
}
#nav .nav .active > a,
#nav .nav .active > a:hover {
  background-color: #f6f6f6 !important;
  color: #555 !important;
}

.navbar .brand {
  display: block;
  float: left;
  padding: 10px 20px 0px 0px;
  margin-left: -20px;
  font-size: 20px;
  font-weight: 200;
  color: #777777;
  text-shadow: 0 1px 0 #ffffff;
  width: 150px;
}

.nav-list > li > a {
  padding: 8px 15px;
  color: #666;
  border-top: 1px solid #ccc;
}

.nav-list > li > a:hover {
  color: #333;
}

.nav li + .nav-header {
  margin-top: 0px;
  background-color: #666;
  color: white;
  text-shadow: 0 0 0;
}

.nav-header {
  display: block;
  padding: 3px 15px;
  font-size: 11px;
  font-weight: bold;
  line-height: 20px;
  color: #999999;
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
  text-transform: uppercase;
  background-color: #666;
  color: white;
  text-shadow: 0 0 0;
}




.header-fixed-top {
  width: 100%;
  padding-top: 15px;
  z-index:200;
  background-color: #F6F6F6;
  background-image: none;
  box-shadow: none;
  border-bottom: 1px solid #E6E6E6;
  background-color: #2c2c2c;
  background-image: -moz-linear-gradient(top, #F6F6F6, #F6F6F6);
  background-image: -ms-linear-gradient(top, #F6F6F6, #F6F6F6);
  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#F6F6F6), to(#F6F6F6));
  background-image: -webkit-linear-gradient(top, #F6F6F6, #F6F6F6);
  background-image: -o-linear-gradient(top, #F6F6F6, #F6F6F6);
  background-image: linear-gradient(top, #F6F6F6, #F6F6F6);
  background-repeat: repeat-x;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#F6F6F6', endColorstr='#F6F6F6', GradientType=0);
  -webkit-box-shadow: 0 0px 4px rgba(0,0,0,.25), inset 0 0px 0 rgba(0,0,0,.1);
  -moz-box-shadow: 0 0px 4px rgba(0,0,0,.25), inset 0 0px 0 rgba(0,0,0,.1);
  box-shadow: 0 0px 4px rgba(0,0,0,.25), inset 0 0px 0 rgba(0,0,0,.1);
}
/* ... */

